[project]
name = "nable-passportal-mcp"
version = "0.1.0"
description = "N-able Passportal MCP Service — stateless HTTP MCP service for the Passportal Documents API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "uvicorn>=0.30.0",
    "starlette>=0.41.0",
]

[project.scripts]
nable-passportal-mcp = "nable_passportal_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nable_passportal_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
